procps-ng-NEXT
  * library
    Re-add elogind support                                 merge #151
    Used memory is Total - Available
  * pidwait: Better warning if pidfd_open not implemented
  * pmap: Dont reuse stdin filehandle                      issue #231
  * ps: threads again display when -L is used with -q      issue #234
  * ps: proper aix format string behavior was restored
  * sysctl: print dotted keys again
  * top: fix 'smaps' bug preventing build under clang      issue #235
  * top: column highlighting allowed under 'L' or 'O'
  * top: can alter autogroup nice value (like 'r' renice)
  * top: can display the following with no need to scroll
  *      cmdline, control groups, environment,
         supplimentary groups, namespaces
  * top: adds a 'message log' recall capability
  * top: will accept utf8 multi-byte input with support
         for full line editing and previous line recall
  * watch: Add equexit no-change and exit option           merge #153

procps-ng-4.0.0
---------------
  * Rename pwait to pidwait
  * free: Add committed line option                        merge #25
  * free: Fix -h --si combined options                     issue #133, #223
  * free: Fix first column justification                   issue #229, #204, #206, Debian #1001689
  * free: Better spacing for Chinese language              issue #213
  * library: renamed to libproc-2 and reset to 0:0:0
  * library: add support for accessing smaps_rollup        issue #112, #201
  * library: add support for accessing autogroups
  * library: add support for LIBPROC_HIDE_KERNEL env var   merge #147
  * library: add support for cpu utilization to pids i/f
  * pkill: Check for lt- variants of program name          issue #192
  * pgrep: Add newline after regex error message           merge #91
  * pgrep: Fix selection where uid/gid > 2^31              merge !146
  * pgrep: Select on cgroup v2 paths                       issue #168